--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1,23 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100);
 
-@font-face {
-    font-family: 'fabian';
-    src: url("../fonts/fabian.ttf");
-}
-@font-face {
-    font-family: 'Laser84';
-    src: url("../fonts/Laser84.ttf");
-}
-
-body {
-    font-family: 'fabian', sans-serif;
-    font-size: 3 rem;
-    background-color: white;
-    background-image: url("../../assets/media/retroBackground.png");
-    background-repeat: no-repeat;
-    height: 100%;
-    background-size: cover;
-}
+/*LOGINSCHERM:*/
 
 .login-container {
     margin-left: auto;
@@ -102,6 +85,8 @@ body {
     text-align: center;
     font-size: 12px;
 }
+
+/*---MAIN MENU---*/
 
 .mainMenu {
     width: 500px;
