--- a/Backend/src/main/resources/webroot/assets/css/style.css
+++ b/Backend/src/main/resources/webroot/assets/css/style.css
@@ -1,26 +1,20 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100);
 
-body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #673AB7;
+/*LOGINSCHERM:*/
+
+a {
+    text-decoration: none;
 }
 
 .login-container {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 150px;
     padding: 40px;
     width: 300px;
     background-color: #F7F7F7;
     border-radius: 2px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-}
-
-.login-container h1 {
-    font-weight: 100;
-    text-align: center;
-    font-size: 2.3em;
 }
 
 .login-container input[type=submit] {
@@ -63,11 +57,11 @@ body {
     border-radius: 3px;
 }
 
-.login-submit, .register-submit {
+.login-submit, .register-submit  {
     border: 0px;
     color: #fff;
     text-shadow: 0 1px rgba(0, 0, 0, 0.1);
-    background-color: #304E67;
+    background-color: #000000;
 }
 
 .login-submit:hover, .register-submit:hover {
@@ -96,9 +90,200 @@ body {
     font-size: 12px;
 }
 
-/*.dk, .pi, .so {
-    width: 300px;
-    height: 300px;
-    margin-top: 90px;
-}*/
+/*---MAIN MENU---*/
 
+.mainMenu {
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+}
+
+.userInfo {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.userInfo div {
+    display: inline-block;
+    color: white;
+    width: 300px;
+    text-align: center;
+    font-size: 2rem;
+    vertical-align: top;
+}
+
+.userInfo-1, .userInfo-2 {
+    margin-right: 80px;
+}
+
+.userInfo-1 {
+    margin-left: 15%;
+}
+
+.logOut {
+    width: 300px;
+    margin-left: auto;
+}
+
+.mainMenu li input[type=submit], .logOut-submit, .back-submit {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-bottom: 30px;
+    position: relative;
+    border-radius: 5px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.retroBlocks-header {
+    margin-bottom: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 390px;
+}
+
+.chooseGameMode-submit, .clan-submit, .shop-submit, .highScore-submit, .logOut-submit, .back-submit {
+    border: 2px solid #9C35FF;
+    color: #000000;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(to right, #9584FF , #FFA1E2);
+}
+
+.chooseGameMode-submit:hover, .clan-submit:hover, .shop-submit:hover, .highScore-submit:hover, .logOut-submit:hover, .back-submit:hover {
+    border: 2px solid #9C35FF;
+    color: #000000;
+    text-shadow: 0 1px rgba(0,0,0,0.3);
+    background: linear-gradient(to right, #FFA1E2 , #9584FF);
+}
+
+.material-icons {
+    color: #FF02B4;
+    margin-left: 10px;
+}
+
+.xp {
+    height: 25px;
+    display: block;
+    border-radius: 20px;
+    font-size: 1.2rem;
+    border: 2px solid #FF02B4;
+    background-color: transparent;
+    position: relative;
+}
+
+.xp-value {
+    display: block;
+    border-radius: 20px;
+    background-color: #FF02B4;
+    height: 100%;
+    width: 40%;
+
+}
+
+.xp-text {
+    display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    vertical-align: center;
+}
+
+.cube {
+    width: 10%;
+    margin-right: 10px;
+}
+
+.cp {
+    width: 13%;
+    margin-right: 10px;
+}
+
+.user-avatar {
+    width: 100px;
+}
+
+/*------Choose Hero------*/
+
+/*.chooseHeroTitle {*/
+    /*color: white;*/
+/*}*/
+
+.choose-hero-container {
+    width: 1200px;
+    height: 380px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.choose-hero {
+    width: 1100px;
+    height: 380px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hero-donkeykong, .hero-pacman, .hero-pikachu, .hero-sony {
+    background-color: yellow;
+    width: 200px;
+    height: 325px;
+    padding: 20px;
+    display: inline-block;
+    opacity: 0.2;
+}
+
+.hero-donkeykong, .hero-pacman, .hero-pikachu {
+    margin-right: 30px;
+}
+
+.choose-hero p {
+    text-align: center;
+}
+
+.donkeyKong {
+    width: 100%;
+    margin-top: 25px;
+    margin-bottom: 35px;
+}
+
+
+
+
+
+/*----------------- Choose a gamemode -------------------*/
+.title{
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+}
+
+figcaption{
+    color: white;
+}
+
+.selected{
+    outline: none;
+    border-color: rebeccapurple;
+    box-shadow: 0 0 20px rebeccapurple;
+}
+
+#showAllGamemodes{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-around;
+}
+
+#showAllGamemodes figure{
+    float: left;
+    width: 40%;
+}
+
+.back {
+    width: 300px;
+    margin-right: auto;
+}
