--- a/application/src/main/resources/webroot/assets/css/style.css
+++ b/application/src/main/resources/webroot/assets/css/style.css
@@ -96,12 +96,10 @@ a {
     width: 500px;
     margin-left: auto;
     margin-right: auto;
-    padding: 30px;
 }
 
 .userInfo {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 30px;
 }
 
 .userInfo div {
@@ -126,7 +124,7 @@ a {
     margin-left: auto;
 }
 
-.mainMenu li input[type=submit], .logOut-submit, .back-submit {
+.mainMenu li input[type=submit], .logOut-submit {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -139,20 +137,20 @@ a {
 }
 
 .retroBlocks-header {
-    margin-bottom: 80px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 390px;
 }
 
-.chooseGameMode-submit, .clan-submit, .shop-submit, .highScore-submit, .logOut-submit, .back-submit {
+.chooseGameMode-submit, .clan-submit, .shop-submit, .highScore-submit, .logOut-submit, .back-submit, .playGame-submit {
     border: 2px solid #9C35FF;
     color: #000000;
     text-shadow: 0 1px rgba(0, 0, 0, 0.1);
     background: linear-gradient(to right, #9584FF , #FFA1E2);
 }
 
-.chooseGameMode-submit:hover, .clan-submit:hover, .shop-submit:hover, .highScore-submit:hover, .logOut-submit:hover, .back-submit:hover {
+.chooseGameMode-submit:hover, .clan-submit:hover, .shop-submit:hover, .highScore-submit:hover, .logOut-submit:hover, .back-submit:hover, .playGame-submit:hover {
     border: 2px solid #9C35FF;
     color: #000000;
     text-shadow: 0 1px rgba(0,0,0,0.3);
@@ -202,54 +200,73 @@ a {
 }
 
 .user-avatar {
-    width: 100px;
+    width: 25%;
 }
 
 /*------Choose Hero------*/
 
-/*.chooseHeroTitle {*/
-    /*color: white;*/
-/*}*/
-
-.choose-hero-container {
-    width: 1200px;
-    height: 380px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.choose-hero {
-    width: 1100px;
-    height: 380px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.hero-donkeykong, .hero-pacman, .hero-pikachu, .hero-sony {
-    background-color: yellow;
-    width: 200px;
-    height: 325px;
-    padding: 20px;
-    display: inline-block;
-    opacity: 0.2;
-}
-
-.hero-donkeykong, .hero-pacman, .hero-pikachu {
-    margin-right: 30px;
-}
-
-.choose-hero p {
+.chooseHeroTitle {
+    color: white;
     text-align: center;
 }
 
-.donkeyKong {
-    width: 100%;
-    margin-top: 25px;
-    margin-bottom: 35px;
+.choose-hero-container {
+    width: 1200px;
+    height: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
 }
 
+.choose-hero {
+    width: 1200px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-flex;
+    justify-content: space-between;
+    list-style-type: none;
+}
 
+.hero-donkeykong, .hero-pacman, .hero-pikachu, .hero-sony {
+    width: 200px;
+    height: 260px;
+    padding: 20px;
+    display: inline-block;
+    text-align: center;
+}
 
+.choose-hero p {
+    font-size: 1.2rem;
+    text-align: center;
+    color: #5E43FF;
+}
+
+.donkeykong {
+    width: 80%;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.playGame {
+    width: 300px;
+    margin-left: auto;
+}
+
+.choose-hero-buttons {
+    display: flex;
+    margin-top: 130px;
+}
+
+.playGame-submit, .back-submit {
+     width: 80%;
+     margin-left: auto;
+     margin-right: auto;
+     display: block;
+     border-radius: 5px;
+     padding-top: 15px;
+     padding-bottom: 15px;
+ }
 
 
 /*----------------- Choose a gamemode -------------------*/
@@ -287,3 +304,5 @@ figcaption{
     width: 300px;
     margin-right: auto;
 }
+
+
