--- a/application/src/main/resources/webroot/assets/css/style.css
+++ b/application/src/main/resources/webroot/assets/css/style.css
@@ -145,14 +145,14 @@ a {
     width: 390px;
 }
 
-.chooseGameMode-submit, .clan-submit, .shop-submit, .highScore-submit, .logOut-submit, .back-submit, .save-submit {
+.chooseGameMode-submit, .clan-submit, .shop-submit, .highScore-submit, .logOut-submit, .back-submit, .save-submit, #no, #yes {
     border: 2px solid #9C35FF;
     color: #000000;
     text-shadow: 0 1px rgba(0, 0, 0, 0.1);
     background: linear-gradient(to right, #9584FF , #FFA1E2);
 }
 
-.chooseGameMode-submit:hover, .clan-submit:hover, .shop-submit:hover, .highScore-submit:hover, .logOut-submit:hover, .back-submit:hover, .save-submit:hover {
+.chooseGameMode-submit:hover, .clan-submit:hover, .shop-submit:hover, .highScore-submit:hover, .logOut-submit:hover, .back-submit:hover, .save-submit:hover, #no:hover, #yes:hover {
     border: 2px solid #9C35FF;
     color: #000000;
     text-shadow: 0 1px rgba(0,0,0,0.3);
@@ -328,4 +328,41 @@ figcaption{
 
     margin-top: 45px;
 }
+
+/*-----Change avatar confirm screen-------*/
+form{
+    color: white;
+    box-shadow: 0 0 50px 10px rebeccapurple;
+    width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 1rem;
+    position: relative;
+    z-index: 5;
+}
+
+h1, p{
+    padding-left: 10px;
+}
+
+form input{
+    width: 49.5%;
+    display: inline-block;
+}
+
+.hidden{
+    visibility: hidden;
+    position: absolute;
+}
+
+.show{
+    visibility: visible;
+    position: absolute;
+    left: 50%;
+    margin-left: -250px;
+    width: 500px;
+    background: url("../media/retroBackground.png");
+}
+
+
 
