--- a/application/src/main/resources/webroot/assets/css/style.css
+++ b/application/src/main/resources/webroot/assets/css/style.css
@@ -203,6 +203,10 @@ a {
     width: 25%;
 }
 
+ul{
+    list-style-type: none;
+}
+
 /*------Choose Hero------*/
 .chooseHeroTitle {
     color: white;
