--- a/application/src/main/resources/webroot/assets/css/dailystreaks.css
+++ b/application/src/main/resources/webroot/assets/css/dailystreaks.css
@@ -77,14 +77,14 @@
 
 
 
-  .close-submit{
+  .close-submit, .openMysteryBox-submit{
       border: 2px solid #9C35FF;
       color: #000000;
       text-shadow: 0 1px rgba(0, 0, 0, 0.1);
       background: linear-gradient(to right, #9584FF , #FFA1E2);
   }
 
-  .close-submit:hover{
+  .close-submit:hover, .openMysteryBox-submit:hover{
       border: 2px solid #9C35FF;
       color: #000000;
       text-shadow: 0 1px rgba(0,0,0,0.3);
@@ -107,10 +107,9 @@
     width: 950px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
-#scratchCard h1{
+#scratchCard h1, #mysteryBoxCard h1{
     font-size: 3rem;
     text-align: center;
     margin-bottom: 5px;
@@ -119,12 +118,12 @@
     margin-right: 40px;
 }
 
-#prices p{
+#pricesScratch p{
     text-align: center;
     margin-left: -20px;
 }
 
-#prices figure img{
+#pricesScratch figure img, #pricesMysteryBox figure img{
     width: 100px;
     height: 100px;
     box-shadow: 0 0 50px 10px rebeccapurple;
@@ -137,7 +136,7 @@
     margin-top: 25px;
 }
 
-#prices{
+#pricesScratch{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -209,4 +208,54 @@ canvas{
 
 .invisible{
     visibility: hidden;
+}
+
+/* -------------------  mystery box ------------ */
+
+#pricesMysteryBox{
+    display: flex;
+    width: 400px;
+    margin-left: 250px;
+    margin-top: 25px;
+    padding-top: 20px;
+}
+
+#pricesMysteryBox p{
+    position: absolute;
+    margin-left: 380px;
+    margin-top: -20px;
+}
+
+#pricesMysteryBox figcaption{
+    text-align: center;
+}
+
+#mysteryBox img{
+    width: 150px;
+    height: 150px;
+    box-shadow: 0 0 50px 10px rebeccapurple;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+#mysteryBox{
+    position: absolute;
+    margin-top: 35px;
+    margin-left: 25px;
+}
+
+.openMysteryBox-submit{
+    width: 150px;
+    margin-left: 20px;
+    display: block;
+    border-radius: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#mysteryBoxCard{
+    width: 1150px;
+    height: 370px;
+    margin-left: auto;
+    margin-right: auto;
 }
