--- a/src/main/resources/webroot/assets/css/style.css
+++ b/src/main/resources/webroot/assets/css/style.css
@@ -470,6 +470,9 @@ section input{
     flex-wrap: nowrap;
     justify-content: space-around;
     padding-top: 3vh;
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .multiplayer-container {
