--- a/src/main/resources/webroot/assets/css/style.css
+++ b/src/main/resources/webroot/assets/css/style.css
@@ -102,9 +102,9 @@ a {
     margin-right: auto;
 }
 
-.userInfo {
-    margin-top: -5%;
-}
+/*.userInfo {*/
+    /*margin-top: -5%;*/
+/*}*/
 
 .userInfo div {
     display: inline-block;
